test/tests/compiler/18_structures/invalid_parse/extra_credit/union_struct_tag.plx
# can't use 'struct' as the keyword for a union declaration
type union struc (a: i32)

pub fn main(none) i32 {
    return 0
}
